--- a/ports-output/pom.xml
+++ b/ports-output/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 
 	<groupId>com.example</groupId>
-	<artifactId>rest-domain</artifactId>
+	<artifactId>ports-output</artifactId>
 	<version>0.2</version>
 	<name>rest-domain</name>
 	<description>Demo Rest domain a.k.a OUTPUT PORTS</description>
