--- a/pom.xml
+++ b/pom.xml
@@ -49,12 +49,12 @@
             <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-web</artifactId>
-                <version>3.4.3</version>
+                <version>7.0.0-M2</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-actuator</artifactId>
-                <version>3.4.3</version>
+                <version>3.4.0</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework.boot</groupId>
