--- a/ports-output/pom.xml
+++ b/ports-output/pom.xml
@@ -12,7 +12,7 @@
 	<groupId>com.example</groupId>
 	<artifactId>ports-output</artifactId>
 	<version>0.2</version>
-	<name>rest-domain</name>
+	<name>ports-output</name>
 	<description>Demo Rest domain a.k.a OUTPUT PORTS</description>
 
 	<dependencies>
@@ -20,12 +20,16 @@
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-openfeign</artifactId>
-			<version>4.2.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.mapstruct</groupId>
 			<artifactId>mapstruct</artifactId>
 			<version>1.6.3</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-web</artifactId>
+			<version>7.0.0-M2</version>
 		</dependency>
 	</dependencies>
 
